--- a/Freight/Views/Calculator/Index.cshtml
+++ b/Freight/Views/Calculator/Index.cshtml
@@ -84,20 +84,20 @@
                     <div class="col-xs-6 col-md-4" style="margin-top:15px;">
                         <label>Origin<i style="color:red" title="Required">*</i></label>
                         <select class="form-select form-control-lg mb-5" id="sourceSelect">
-                            <option value="-1">Please Select a Country</option>
+                            <option value="">Please Select a Country</option>
                         </select>
                     </div>
 
                     <div class="col-xs-6 col-md-4" style="margin-top: 15px; ">
                         <label>Destination<i style="color:red" title="Required">*</i></label>
                         <select class="form-select form-control-lg mb-5" id="destinationSelect">
-                            <option value="-1">Please Select a Country</option>
+                            <option value="">Please Select a Country</option>
                         </select>
                     </div>
                     <div class="col-xs-6 col-md-4" style="margin-top: 15px; ">
                         <label>Carrier</label>
                         <select class="form-select form-control-lg mb-5" id="carrierSelect">
-                            <option value="-1">Please Select a Carrier</option>
+                            <option value="">Please Select a Carrier</option>
                         </select>
                     </div>
 
@@ -106,14 +106,14 @@
                     <div class="col-xs-6 col-md-4">
                         <label id="lableService">Service Type</label>
                         <select class="form-select form-control-lg mb-5" id="servicesSelect">
-                            <option selected>Services Type</option>
+                            <option selected value="">Services Type</option>
                         </select>
                     </div>
 
                     <div class="col-xs-6 col-md-4">
                         <label id="lablePackaging">Packaging Type</label>
                         <select class="form-select form-control-lg mb-5" id="packagingSelect">
-                            <option selected>Please select carrier firstly</option>
+                            <option selected value="">Please select carrier firstly</option>
                         </select>
                     </div>
                     <div class="col-xs-6 col-md-4">
@@ -131,7 +131,7 @@
                     <div class="col-xs-6 col-md-4" style="margin-top:15px;" id="lengthGroup">
                         <label for="exampleInputEmail1">Length</label>
                         <div class="input-group-lg mb-lg-5, col-xl-12" style="margin-left: -15px; display: flex">
-                            <input type="text" id="weightSelect" placeholder="Length" class="form-control" aria-label="Weight" style="max-width: 395px">
+                            <input type="text" id="txtLength" placeholder="Length" class="form-control" aria-label="Weight" style="max-width: 395px">
                             <div class="input-group-append">
                                 <span class="input-group-text">CM</span>
                             </div>
@@ -141,7 +141,7 @@
                     <div class="col-xs-6 col-md-4" style="margin-top:15px" id="widthGroup">
                         <label for="exampleInputEmail1">Width</label>
                         <div class="input-group-lg mb-lg-5, col-xl-12" style="margin-left: -15px; display: flex">
-                            <input type="text" id="weightSelect" placeholder="Width" class="form-control" aria-label="Weight" style="max-width: 395px">
+                            <input type="text" id="txtWidth" placeholder="Width" class="form-control" aria-label="Weight" style="max-width: 395px">
                             <div class="input-group-append">
                                 <span class="input-group-text">CM</span>
                             </div>
@@ -150,7 +150,7 @@
                     <div class="col-xs-6 col-md-4" style="margin-top:15px;" id="heightGroup">
                         <label for="exampleInputEmail1">Height</label>
                         <div class="input-group-lg mb-lg-5, col-xl-12" style="margin-left: -15px; display: flex">
-                            <input type="text" id="weightSelect" placeholder="Height" class="form-control" aria-label="Weight" style="max-width: 395px">
+                            <input type="text" id="txtHeight" placeholder="Height" class="form-control" aria-label="Weight" style="max-width: 395px">
                             <div class="input-group-append">
                                 <span class="input-group-text">CM</span>
                             </div>
@@ -215,9 +215,9 @@
             dataType: "json",
             contentType: "application/json;charset=utf-8",
             success: function (data) {
-                var s = '<option value="-1">Please Select a Country</option>';
+                var s = '<option value="">Please Select a Country</option>';
                 for (var i = 0; i < data.data.length; i++) {
-                    s += '<option value="' + data.data[i].value + '">' + data.data[i].text + '</option>';
+                    s += '<option value="' + data.data[i].text + '">' + data.data[i].text + '</option>';
                 }
                 $("#sourceSelect").html(s);
                 $("#destinationSelect").html(s);
@@ -229,7 +229,7 @@
             dataType: "json",
             contentType: "application/json;charset=utf-8",
             success: function (data) {
-                var s = '<option value="-1">Please Select a Carrier</option>';
+                var s = '<option value="">Please Select a Carrier</option>';
                 for (var i = 0; i < data.data.length; i++) {
                     s += '<option value="' + data.data[i].value + '">' + data.data[i].text + '</option>';
                 }
@@ -243,14 +243,14 @@
             dataType: "json",
             contentType: "application/json;charset=utf-8",
             success: function (data) {
-                var s = '<option value="-1">Please Select a Service Type</option>';
+                var s = '<option value="">Please Select a Service Type</option>';
                 for (var i = 0; i < data.data.length; i++) {
                     s += '<option value="' + data.data[i].value + '">' + data.data[i].text + '</option>';
                 }
                 $("#servicesSelect").html(s);
             }
         });
-        
+
         // Event choose carrier
         $("#carrierSelect").change(function () {
             var valueOfCarrier = $("#carrierSelect").val();
@@ -273,14 +273,14 @@
                 dataType: "json",
                 contentType: "application/json;charset=utf-8",
                 success: function (data) {
-                    var s = '<option value="-1">Please Select a Packing Type</option>';
+                    var s = '<option value="">Please Select a Packing Type</option>';
                     for (var i = 0; i < data.data.length; i++) {
                         s += '<option value="' + data.data[i].value + '">' + data.data[i].text + '</option>';
                     }
                     $("#packagingSelect").html(s);
                 }
             });
-            
+
             $("#weightSelect").html(weightOptionDefault);
             var servicesForFedex = serviceOptionDefault + "<option value='1'>Priority (IP)</option>"
                 + "<option value='2'>Economy (IE)</option>"
@@ -358,9 +358,16 @@
         $("#searchButton").click(function () {
             var source = $("#sourceSelect").val();
             var desination = $("#destinationSelect").val();
+            var serviceValue = $("#servicesSelect").val();
+            var packagingSelect = $("#packagingSelect").val();
+            var weightSelect = $("#weightSelect").val();
+            var height = $("#txtHeight").val();
+            var length = $("#txtLength").val();
+            var width = $("#txtWidth").val();
+
             var contentToRemove = document.querySelectorAll("#tr-id");
             $(contentToRemove).remove();
-            if (source == "-1" || desination == "-1") {
+            if (source == "" || desination == "") {
                 alert('Source, destination are not empty');
                 return false;
             }
@@ -374,33 +381,38 @@
                 type: "POST",
                 url: "/Calculator/GetPriceAdvance",
                 data: JSON.stringify({
-                    "Length": 1,
-                    "Height": 1,
-                    "Width": 1,
-                    "From": "SINGAPORE",
-                    "To": "MALAYSIA",
-                    "ServiceType": "",
-                    "PackageType": "",
+                    "Length": length,
+                    "Height": height,
+                    "Width": width,
+                    "From": source,
+                    "To": desination,
+                    "ServiceType": serviceValue,
+                    "PackageType": packagingSelect,
                     "Region": "",
-                    "Weight": 1
+                    "Weight": weightSelect
                 }),
                 dataType: "json",
                 contentType: "application/json;charset=utf-8",
                 success: function (response) {
-
-                    var data = [];
-                    for (var i = 0; i < response.data.Data.length; i++) {
-                        var item = response.data.Data[i];
-                        $('<tr id="tr-id">')
-                            .append($('<td>').append(item.CARRIER_NAME))
-                            .append($('<td>').append(item.SERVICE_TYPE))
-                            .append($('<td>').append(item.PACKAGE_TYPE))
-                            .append($('<td>').append(item.WEIGHT_RANGE))
-                            .append($('<td>').append(item.SURCHARGE))
-                            .append($('<td>').append(item.WORKING_DAYS))
-                            .append($('<td>').append(item.COST))
-                            .append($('<td>').append(item.COST * (1 + item.SURCHARGE/100)))
+                    if (response.data.Data.length == 0) {
+                        $('<tr id="tr-id" colspan="8">')
+                            .append($('<td>').append("Can not found"))
                             .appendTo('table tbody');
+                    }
+                    else {
+                        for (var i = 0; i < response.data.Data.length; i++) {
+                            var item = response.data.Data[i];
+                            $('<tr id="tr-id">')
+                                .append($('<td>').append(item.CARRIER_NAME))
+                                .append($('<td>').append(item.SERVICE_TYPE))
+                                .append($('<td>').append(item.PACKAGE_TYPE))
+                                .append($('<td>').append(item.WEIGHT_RANGE))
+                                .append($('<td>').append(item.SURCHARGE))
+                                .append($('<td>').append(item.WORKING_DAYS))
+                                .append($('<td>').append(item.COST))
+                                .append($('<td>').append(item.COST * (1 + item.SURCHARGE / 100)))
+                                .appendTo('table tbody');
+                        }
                     }
                 }
             });
