--- a/Freight/Views/Calculator/Index.cshtml
+++ b/Freight/Views/Calculator/Index.cshtml
@@ -106,7 +106,7 @@
                     <div class="col-xs-6 col-md-4">
                         <label id="lableService">Service Type</label>
                         <select class="form-select form-control-lg mb-5" id="servicesSelect">
-                            <option selected value="">Services Type</option>
+                            <option selected value="">Please select carrier firstly</option>
                         </select>
                     </div>
 
@@ -237,19 +237,6 @@
             }
         });
 
-        $.ajax({
-            type: "GET",
-            url: "/Utility/GetListServices",
-            dataType: "json",
-            contentType: "application/json;charset=utf-8",
-            success: function (data) {
-                var s = '<option value="">Please Select a Service Type</option>';
-                for (var i = 0; i < data.data.length; i++) {
-                    s += '<option value="' + data.data[i].value + '">' + data.data[i].text + '</option>';
-                }
-                $("#servicesSelect").html(s);
-            }
-        });
 
         // Event choose carrier
         $("#carrierSelect").change(function () {
@@ -278,6 +265,24 @@
                         s += '<option value="' + data.data[i].value + '">' + data.data[i].text + '</option>';
                     }
                     $("#packagingSelect").html(s);
+                }
+            });
+
+            $.ajax({
+                type: "GET",
+                url: "/Utility/GetListServices",
+                dataType: "json",
+                contentType: "application/json;charset=utf-8",
+                success: function (data) {
+
+                    var carrier = $("#carrierSelect").val();
+                    var s = '<option value="">Please Select a Service Type</option>';
+                    for (var i = 0; i < data.data.length; i++) {
+                        if (carrier == '' || carrier == data.data[i].extend) {
+                            s += '<option value="' + data.data[i].value + '">' + data.data[i].text + '</option>';
+                        }
+                    }
+                    $("#servicesSelect").html(s);
                 }
             });
 
@@ -396,6 +401,7 @@
                 contentType: "application/json;charset=utf-8",
                 success: function (response) {
                     var count = 0;
+
                     for (var i = 0; i < response.data.Data.length; i++) {
                         var item = response.data.Data[i];
                         if (carrier == '' || carrier == item.CARRIER_NAME) {
